# mpwall

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  PLANNING.md  README.md  mpwall
documentation/: README.md  architecture.md  contributing.md  getting-started.md
src/cli/: commands.rs
src/core/: config.rs  mod.rs  monitor.rs  process.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
src/tui/panels/: browser.rs  library.rs  mod.rs  settings.rs  status.rs
tests/: integration_tests.rs
