[package]
name = "mpwall"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mpwall"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

