[package]
name = "mpwall"
version = "1.0.0"
edition = "2021"
description = "A professional hybrid CLI/TUI live video wallpaper manager for Hyprland/Wayland"
license = "MIT"
repository = "https://github.com/insadamt/mpwall"
keywords = ["wallpaper", "hyprland", "wayland", "tui", "mpvpaper"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "mpwall"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
